--- a/app_server/views/index.pug
+++ b/app_server/views/index.pug
@@ -2,4 +2,14 @@ extends layout
 
 block content
   h1= title
-  p Hi David, Welcome to #{title}
+  p Hola David, Bienvenido a #{title}
+  p Este, ejercicio ha sido terminado para la sesión 2 con las siguientes características:
+  ul#caracteristicas
+  li
+    a(href="https://nodejs.org/") Node Js
+  li
+    a(href="https://www.express.com/") Express
+  li
+    a(href="https://fezvrasta.github.io/bootstrap-material-design/") Boostrap Material Design Template
+  li
+    Separacion Modelo-Vista-Controlador MVC
