--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -1,11 +1,12 @@
 doctype html
 html
 	head
+	meta(charset='utf-8')
 	meta(name='viewport', content='width=device-width, initial-scale=1.0')
 	title= title
-	link(rel='stylesheet', href='/bootstrap-material/css/bootstrap-material-design.css')
+	link(rel='stylesheet', href='/css/bootstrap-material-design.css')
 	body
 		block content
 		
 		script(src='/javascripts/jquery.min.js')
-		script(src='/bootstrap-material/js/bootstrap-material-design.js')
+		script(src='/js/bootstrap-material-design.js')
