--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -5,6 +5,7 @@ html
 	meta(name='viewport', content='width=device-width, initial-scale=1.0')
 	title= title
 	link(rel='stylesheet', href='/bootstrap-material/css/bootstrap-material-design.css')
+	link(rel='stylesheet', href='/css/mystyle.css')
 	body
 		block content
 
