Añade más operaciones HTTP
 - Añade una operación HTTP extra

--- a/app_server/views/index.pug
+++ b/app_server/views/index.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   #contenido.container-fluid
     h1(class='container-fluid')= title
-    p(class='container-fluid') Hola David, Bienvenido a #{title}
+    p(class='container-fluid') Hola #{nombre}, Bienvenido a #{title}
     p(class='container-fluid') Este, ejercicio ha sido terminado para la sesión 2 con las siguientes características:
     #caracteristicas.card.container-fluid
       ul.list-group
